Greatly improve performance of course and problem set pages
 Using Hibernate formulas for `solutionsWithSubmissions` and `latestSubmission`, avoiding unnecessary deserialization of tons of submission results. Downside: we have native SQL in our entity classes now.